# SugarCubes

./: .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .prettierrc.cjs  .releaserc.cjs  .releaserc.json  CHANGELOG.md  README.md  __init__.py  agents.md  jest.config.cjs  jest.config.json  nodes.py  package-lock.json  package.json  payloads.py  pyproject.toml  tsconfig.json  tsconfig.tests.json  tsconfig.web.json
backend/: __init__.py  maintenance.py  routes.py
cube_model/: authored_default_policy.py  document.py  flavors.py  identity_projection.py  migrate.py  model_targets.py  picker_fields.py  surface.py  surface_value_policy.py  version_policy.py  widget_values.py
exporter/: graph.py  io.py  node_inputs.py  serializer.py  value_validation.py  versioning.py  widget_validation.py
importer/: __init__.py  loader.py
runtime/: __init__.py
scripts/: build-web.ts  migrate_legacy_cubes.py  migrate_subgraph_schema.py  repair_picker_defaults.py  run-tests.mjs  run-tests.ts  run_mypy.py  standards-audit.mjs  standards-audit.ts  standards_audit.py  update-release-versions.mjs  update-release-versions.ts
stubs/: folder_paths.pyi
sugarcubes/: __init__.py  extension_layout.py  host_api.py  maintenance.py  nodes.py  payloads.py
tests/: __init__.py  conftest.py  test_backend_services_registry.py  test_cube_dependency_routes.py  test_cube_dependency_service.py  test_cube_identity.py  test_cube_identity_projection.py  test_cube_library_backend_contract.py  test_cube_materialization.py  test_cube_output_events.py  test_cube_pack_audit.py  test_cube_promotion_service.py  test_cube_routes_list_preview.py  test_cube_routes_metadata.py  test_cube_routes_save_load.py  test_cube_schema_migration.py  test_cube_version_policy.py  test_export_widget_identity.py  test_exporter_versioning.py  test_extension_layout.py  test_graph_analysis.py  test_importer_errors.py  test_importer_loader.py  test_importer_prepare.py  test_init_helpers.py  test_instrumentation_logger.py  test_license_headers.py  test_local_flavor_service.py  test_maintenance.py  test_model_targets.py  test_nodes.py  test_packaging_metadata.py  test_rename_payload.py  test_roundtrip.py  (+9 more)
(+461 files in other folders)
