[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "SugarCubes"
description = "Composable workflow units for ComfyUI."
version = "0.10.0"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
]

[project.urls]
Repository = "https://github.com/Artificial-Sweetener/SugarCubes"
"Bug Tracker" = "https://github.com/Artificial-Sweetener/SugarCubes/issues"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "ruff",
]

[tool.comfy]
PublisherId = "artificialsweetener"
DisplayName = "SugarCubes"
Icon = ""
includes = []

[tool.setuptools]
py-modules = ["nodes", "payloads"]

[tool.setuptools.packages.find]
include = [
    "backend*",
    "cube_model*",
    "exporter*",
    "importer*",
    "instrumentation*",
    "runtime*",
]

[tool.black]
target-version = ["py312"]
