[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "SugarCubes"
description = "Composable workflow units for ComfyUI."
version = "0.10.0"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp",
]

[project.urls]
Repository = "https://github.com/Artificial-Sweetener/SugarCubes"
"Bug Tracker" = "https://github.com/Artificial-Sweetener/SugarCubes/issues"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "numpy",
    "Pillow",
    "pytest",
    "ruff",
]

[tool.comfy]
PublisherId = "artificialsweetener"
DisplayName = "SugarCubes"
Icon = ""
includes = []

[tool.setuptools.packages.find]
include = [
    "sugarcubes*",
]

[tool.black]
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
mypy_path = "stubs"
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
exclude = [
    "^node_modules/",
    "^cubes/",
]
